title screen (title image, hypolux on top of H, diabolux eyes animation)

--- a/Projet/HypoluxAdventure.csproj
+++ b/Projet/HypoluxAdventure.csproj
@@ -33,6 +33,9 @@
     <None Update="Content\globuxAnimation.sf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Content\img\diaboluxEyes.sf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Content\img\Heart\heartAnimation.sf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
