add to content fireball

--- a/Projet/HypoluxAdventure.csproj
+++ b/Projet/HypoluxAdventure.csproj
@@ -45,6 +45,9 @@
     <None Update="Content\img\diaboluxEyesAnimation.sf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Content\img\fireballAnimation.sf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Content\img\GlobuxAnimation.sf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
