add bow animation

--- a/Projet/HypoluxAdventure.csproj
+++ b/Projet/HypoluxAdventure.csproj
@@ -36,6 +36,9 @@
     <None Update="Content\img\bomberAnimation.sf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Content\img\bowAnimation.sf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Content\img\chestAnimation.sf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
