add ghost sprite

--- a/Projet/HypoluxAdventure.csproj
+++ b/Projet/HypoluxAdventure.csproj
@@ -51,6 +51,9 @@
     <None Update="Content\img\fireballAnimation.sf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Content\img\ghostAnimation.sf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Content\img\GlobuxAnimation.sf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
